--- a/proj.ipynb
+++ b/proj.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv(r'C:\\Users\\rana ahmed\\Desktop\\Senior_2\\deepproject\\leaf-classification\\train.csv')\n",
-    "test_data = pd.read_csv(r'C:\\Users\\rana ahmed\\Desktop\\Senior_2\\deepproject\\leaf-classification\\test.csv')"
+    "train_data = pd.read_csv(r'C:\\Users\\rana ahmed\\Desktop\\Senior_2\\deepLearingproject\\Leaf-Classification\\leaf-classification\\train.csv')\n",
+    "test_data = pd.read_csv(r'C:\\Users\\rana ahmed\\Desktop\\Senior_2\\deepLearingproject\\Leaf-Classification\\leaf-classification\\test.csv')"
    ]
   },
   {
@@ -1591,7 +1591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_folder = r\"C:\\Users\\rana ahmed\\Desktop\\Senior_2\\deepproject\\leaf-classification\\images\"\n",
+    "image_folder = r\"C:\\Users\\rana ahmed\\Desktop\\Senior_2\\deepLearingproject\\Leaf-Classification\\leaf-classification\\images\"\n",
     "image_filenames = sorted(os.listdir(image_folder))"
    ]
   },
