--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -14300,6 +14300,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      " 1/20 [>.............................] - ETA: 0s - loss: 2.1643 - accuracy: 0.6875"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20/20 [==============================] - 0s 19ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 2/30\n",
+      "20/20 [==============================] - 0s 25ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 3/30\n",
+      "20/20 [==============================] - 0s 24ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 4/30\n",
+      "20/20 [==============================] - 0s 19ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 5/30\n",
+      "20/20 [==============================] - 0s 20ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 6/30\n",
+      "20/20 [==============================] - 0s 18ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 7/30\n",
+      "20/20 [==============================] - 0s 19ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 8/30\n",
+      "20/20 [==============================] - 0s 20ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 9/30\n",
+      "20/20 [==============================] - 0s 21ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 10/30\n",
+      "20/20 [==============================] - 0s 17ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 11/30\n",
+      "20/20 [==============================] - 0s 22ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 12/30\n",
+      "20/20 [==============================] - 0s 21ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 13/30\n",
+      "20/20 [==============================] - 0s 21ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 14/30\n",
+      "20/20 [==============================] - 0s 19ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 15/30\n",
+      "20/20 [==============================] - 0s 17ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 16/30\n",
+      "20/20 [==============================] - 0s 22ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 17/30\n",
+      "20/20 [==============================] - 0s 21ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 18/30\n",
+      "20/20 [==============================] - 0s 23ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 19/30\n",
+      "20/20 [==============================] - 0s 22ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 20/30\n",
+      "20/20 [==============================] - 0s 18ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 21/30\n",
+      "20/20 [==============================] - 0s 22ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 22/30\n",
+      "20/20 [==============================] - 0s 23ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 23/30\n",
+      "20/20 [==============================] - 0s 23ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 24/30\n",
+      "20/20 [==============================] - 0s 17ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 25/30\n",
+      "20/20 [==============================] - 0s 20ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 26/30\n",
+      "20/20 [==============================] - 0s 17ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 27/30\n",
+      "20/20 [==============================] - 0s 23ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 28/30\n",
+      "20/20 [==============================] - 0s 23ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 29/30\n",
+      "20/20 [==============================] - 0s 19ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n",
+      "Epoch 30/30\n",
+      "20/20 [==============================] - 0s 18ms/step - loss: 2.5537 - accuracy: 0.4479\n",
+      "Test Loss: 2.5537, Test Accuracy: 0.4479\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evaluate_model(Model, Test_dataset,num_epochs):\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        print(f\"Epoch {epoch + 1}/{num_epochs}\")\n",
+    "        test_loss, test_accuracy = Model.evaluate(Test_dataset)\n",
+    "        print(f\"Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy:.4f}\")\n",
+    "\n",
+    "    return test_loss, test_accuracy\n",
+    "\n",
+    "test_loss, test_accuracy = evaluate_model(Model,test_dataset,30)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
