--- a/CNNaugment.ipynb
+++ b/CNNaugment.ipynb
@@ -10508,14 +10508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/10 - 1s - loss: 3.8676 - accuracy: 0.4322 - 1s/epoch - 109ms/step\n",
+      "10/10 [==============================] - 1s 80ms/step - loss: 3.8676 - accuracy: 0.4322\n",
       "Test loss: 3.87\n",
       "Test accuracy: 43.22%\n"
      ]
@@ -10524,7 +10524,7 @@
    "source": [
     "def test_results(model, testing_data):\n",
     "\n",
-    "    test_loss, test_acc = model.evaluate(testing_data, verbose=2)\n",
+    "    test_loss, test_acc = model.evaluate(testing_data, verbose=1)\n",
     "    print('Test loss: {loss:.2f}'.format(loss=test_loss))\n",
     "    print('Test accuracy: {acc:.2f}%'.format(acc=test_acc*100))\n",
     "    return\n",
